ocp/deployments/manifests/progressive/rollout_status_service.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: &name status-service
  labels: &labels
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: microservices-demo
spec:
  replicas: 3
  strategy:
    canary:
      canaryService: status-service-canary
      stableService: *name
      trafficRouting:
        plugins:
          argoproj-labs/openshift:
            routes:
              - *name
      steps:
      - setWeight: 20
      - pause: {}
      - setWeight: 40
      - pause: {duration: 45}
      - setWeight: 60
      - pause: {duration: 20}
      - setWeight: 80
      - pause: {duration: 10}
  revisionHistoryLimit: 2
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      securityContext:
        runAsUser: 65535
        runAsGroup: 65535
      automountServiceAccountToken: false
      containers:
        - name: *name
          image: ghcr.io/leonsteinhaeuser/rh-ocp-examples-status:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 32Mi
            requests:
              cpu: 10m
              memory: 32Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          securityContext:
            runAsUser: 65535
            runAsGroup: 65535
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - all
