ocp/deployments/manifests/progressive/route_number_service.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: number-service
  labels:
    app.kubernetes.io/name: number-service
    app.kubernetes.io/instance: number-service
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: microservies-demo
spec:
  host: number-service-2.apps-crc.testing
  port:
    targetPort: http
  to:
    kind: Service
    name: number-service
    weight: 100
  alternateBackends:
    - kind: Service
      name: number-service-canary
      weight: 0
  endpointPublishingStrategy:
    scope: Internal
    type: LoadBalancerService
