ocp/deployments/manifests/progressive/route_view_service.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: view-service
  labels:
    app.kubernetes.io/name: view-service
    app.kubernetes.io/instance: view-service
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: microservies-demo
spec:
  host: view-service-2.apps-crc.testing
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: None
    termination: passthrough
  to:
    kind: Service
    name: view-service
    weight: 100
  alternateBackends:
    - kind: Service
      name: view-service-canary
      weight: 0
